# library-skills

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/: dependabot.yml  labeler.yml
.github/DISCUSSION_TEMPLATE/: questions.yml
.github/ISSUE_TEMPLATE/: config.yml  privileged.yml
.github/workflows/: build-docs.yml  create-draft-release.yml  deploy-docs.yml  detect-conflicts.yml  issue-manager.yml  labeler.yml  latest-changes.yml  pre-commit.yml  prepare-release.yml  publish.yml  smokeshow.yml  test-redistribute.yml  test.yml  zizmor.yml
docs/: contributing.md  index.md  reference.md  release-notes.md
docs/about/: index.md
docs/create/: index.md
docs/css/: custom.css
docs/use/: index.md
scripts/: check_release_versions.py  deploy_docs_status.py  docs.py  format.sh  lint.sh  prepare_release.py  sync_tool_skill.py  test.sh
src/library_skills/: cli.py  deps.py  installer.py  python_env.py  scanner.py  ui.py  workspace.py
src/library_skills/tool_skill/: __init__.py
tests/: test_cli.py  test_deps.py  test_installer.py  test_prepare_release.py  test_python_env.py  test_scanner.py  test_workspace.py
ts/src/: cli.ts  deps.ts  installer.ts  output.ts  python-env.ts  scanner.ts  workspace.ts
ts/src/tool_skill/: SKILL.md
ts/tests/: library-skills.test.ts
