[project]
name = "library-skills"
version = "0.0.1"
description = "Library Agent Skills"
readme = "README.md"
authors = [
    { name = "Sebastián Ramírez", email = "tiangolo@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "rich-toolkit>=0.19.7",
    "tomli>=2.4.1 ; python_version < '3.11'",
    "typer>=0.15.0",
]

[project.scripts]
library-skills = "library_skills.cli:main"

[dependency-groups]
dev = [
    { include-group = "tests" },
    { include-group = "github-actions" },
    "prek >=0.2.22",
    "zizmor >=1.23.1",
]
tests = [
    "coverage[toml]>=7.13",
    "ty>=0.0.25",
    "pytest>=9.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.15.0",
]
github-actions = [
    "httpx >=0.27.0,<1.0.0",
    "pydantic >=2.9.0,<3.0.0",
    "pydantic-settings >=2.1.0,<3.0.0",
    "pygithub >=2.3.0,<3.0.0",
    "pyyaml >=5.3.1,<7.0.0",
    "smokeshow >=0.5.0",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-include = [
    "scripts/test.sh",
    "tests/**",
]

[tool.pytest]
minversion = "9.0"
addopts = [
    "--strict-config",
    "--strict-markers",
    "--cov=library_skills",
    "--cov=tests",
    "--cov-report=term-missing",
]
strict_xfail = true
filterwarnings = [
    "error",
]

[tool.coverage.run]
parallel = true
data_file = "coverage/.coverage"
source = [
    "tests",
    "src/library_skills",
]
context = '${CONTEXT}'
relative_files = true

[tool.coverage.report]
show_missing = true
sort = "-Cover"
exclude_lines = [
    "pragma: no cover",
    "@overload",
    'if __name__ == "__main__":',
    "if TYPE_CHECKING:",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ty.terminal]
error-on-warning = true
