[project]
name = "library-skills"
version = "0.0.1"
description = "Library Skills, AI Agents using libraries, as intended, always up to date."
readme = "README.md"
authors = [
    { name = "Sebastián Ramírez", email = "tiangolo@gmail.com" }
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet",
]
dependencies = [
    "rich-toolkit>=0.19.7",
    "tomli>=2.4.1 ; python_version < '3.11'",
    "typer>=0.24.2",
]

[project.urls]
Homepage = "https://github.com/tiangolo/library-skills"
Documentation = "https://library-skills.io"
Repository = "https://github.com/tiangolo/library-skills"
Issues = "https://github.com/tiangolo/library-skills/issues"
Changelog = "https://library-skills.io/release-notes/"

[project.scripts]
library-skills = "library_skills.cli:main"

[dependency-groups]
dev = [
    { include-group = "tests" },
    { include-group = "docs" },
    { include-group = "github-actions" },
    "prek >=0.2.22",
    "zizmor >=1.23.1",
]
tests = [
    "coverage[toml]>=7.13",
    "ty>=0.0.25",
    "pytest>=9.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.15.11",
]
docs = [
    "cairosvg >=2.8.2",
    "markdown-include-variants >=0.0.8",
    "mdx-include >=1.4.1",
    "pillow >=12.1.1",
    "pyyaml >=5.3.1",
    "typer >= 0.24.1",
    "zensical >=0.0.26",
]
github-actions = [
    "httpx >=0.27.0,<1.0.0",
    "pydantic >=2.9.0,<3.0.0",
    "pydantic-settings >=2.1.0,<3.0.0",
    "pygithub >=2.3.0,<3.0.0",
    "pyyaml >=5.3.1,<7.0.0",
    "smokeshow >=0.5.0",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
source-include = [
    "scripts/test.sh",
    "tests/**",
]

[tool.pytest]
minversion = "9.0"
addopts = [
    "--strict-config",
    "--strict-markers",
    "--cov=library_skills",
    "--cov=tests",
    "--cov-report=term-missing",
]
strict_xfail = true
filterwarnings = [
    "error",
]

[tool.coverage.run]
parallel = true
data_file = "coverage/.coverage"
source = [
    "tests",
    "src/library_skills",
]
context = '${CONTEXT}'
relative_files = true

[tool.coverage.report]
show_missing = true
sort = "-Cover"
exclude_lines = [
    "pragma: no cover",
]

[tool.coverage.html]
show_contexts = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ty.terminal]
error-on-warning = true
